[gd_scene load_steps=6 format=3 uid="uid://wtwlfvp3f4l5"]

[ext_resource type="Script" path="res://WorldMap/WorldMap.gd" id="2_vuo5s"]
[ext_resource type="Script" path="res://WorldMap/States/WM_StateMachine.gd" id="3_8uql4"]
[ext_resource type="Script" path="res://WorldMap/States/WM_States_Observation.gd" id="4_0fecx"]
[ext_resource type="Script" path="res://WorldMap/States/WM_States_Option.gd" id="5_hqa5x"]
[ext_resource type="Script" path="res://WorldMap/Camera2D.gd" id="5_v4oce"]

[node name="WorldMap" type="Node"]
script = ExtResource("2_vuo5s")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_8uql4")

[node name="Observation" type="Node" parent="StateMachine"]
script = ExtResource("4_0fecx")

[node name="Option" type="Node" parent="StateMachine"]
script = ExtResource("5_hqa5x")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
script = ExtResource("5_v4oce")

[node name="State" type="Label" parent="."]
offset_top = 25.0
offset_right = 40.0
offset_bottom = 48.0

[node name="HoveredObjectLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Tileset" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
